--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,22 +35,21 @@ android {
 }
 
 dependencies {
-
     // Import AAR
     implementation(fileTree("libs"))
 
     // Android X
-    implementation 'androidx.core:core-ktx:1.8.0' // ＊
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1' // // ＊
-    implementation 'androidx.fragment:fragment-ktx:1.5.3' // ＊
-    implementation 'androidx.appcompat:appcompat:1.3.0' // ＊
-    implementation 'androidx.activity:activity-ktx:1.3.0-alpha08' // ＊
-    implementation 'androidx.recyclerview:recyclerview:1.3.2'
+    implementation libs.androidx.core.ktx.v180
+    implementation libs.androidx.lifecycle.runtime.ktx
+    implementation libs.androidx.fragment.ktx
+    implementation libs.androidx.appcompat.v130
+    implementation libs.androidx.activity.ktx
 
     // UI
-    implementation 'com.google.android.material:material:1.8.0' // ＊
+    implementation libs.material.v180
+    implementation libs.androidx.recyclerview
 
     // kotlin & coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3'
+    implementation libs.kotlinx.coroutines.android
+    implementation libs.kotlinx.coroutines.core
 }
